# fetch-bio-terms

./: README.md  pyproject.toml
examples/: query_.py
fetch_bio/: .env.example  __init__.py  __main__.py  fetch_bio_terms.py
