[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fetch_bio"]

[project]
name = "fetch-bio-terms"
version = "0.1.0"
description = "Python utilities for retrieving biological terms from ontologie."
authors = [
    { name = "Weiwei Ai", email = "wai484@aucklanduni.ac.nz" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
fetch_bio = "fetch_bio.__main__:main"
